<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="usb_storage">USB storage</string>
    <string name="usb_storage_eject">Unmount USB storage</string>
    <string name="usb_storage_eject_summary">Unmount USB storage so you can safely remove it</string>
    <string name="usb_storage_mount">Mount USB storage</string>
    <string name="usb_storage_mount_summary">Mount the USB storage</string>
    <string name="usb_storage_insert_summary">Connect a USB storage for mounting</string>
    <string name="usb_storage_format">Clear USB storage</string>
    <string name="usb_storage_format_summary">"Clear all data on the device's USB storage, such as music and photos."</string>
    <string name="usb_storage_unavailable">Unavailable</string>
    <string name="usb_storage_format_title">Clear USB storage</string>
    <string name="usb_storage_format_desc">This action will erase the USB storage. You will lose <b>all</b> data saved there!</string>
    <string name="usb_storage_format_button_text">Clear USB storage</string>
    <string name="usb_storage_format_final_desc">Clear USB storage and delete all files saved in it? Action cannot be reversed!</string>
    <string name="usb_storage_format_final_button_text">Delete everything</string>
    <string name="usb_storage_dlg_confirm_unmount_title">Unmount USB storage</string>
    <string name="usb_storage_dlg_confirm_unmount_text">After you unmount the USB storage, some applications you are using will close and may be unavailable until you remount the USB storage.</string>
    <string name="usb_storage_dlg_error_unmount_title">Could not unmount USB storage</string>
    <string name="usb_storage_dlg_error_unmount_text">Could not unmount USB storage. Try again later.</string>
    <string name="usb_storage_unmount_inform_text">USB storage will be unmounted</string>
    <string name="phone_memory">Device memory</string>
    <string name="erase_emmc_storage">Clear internal storage</string>
    <string name="erase_emmc_storage_desc">"Clear all data on device's internal storage, such as music and photos."</string>
    <string name="emmc_memory">Internal storage</string>
    <string name="emmc_format">Clear internal storage</string>
    <string name="emmc_format_desc">"Format (clear) device's internal storage"</string>
    <string name="emmc_mount">Mount internal storage</string>
    <string name="emmc_mount_summary">Mount the internal storage</string>
    <string name="emmc_erase">Clear internal storage</string>
    <string name="emmc_erase_description">This action will clear internal storage. You will lose all data on it.</string>
    <string name="emmc_erase_button">Clear internal storage</string>
    <string name="emmc_erase_everything_desc">Clear all files saved in it? Action cannot be reversed!</string>
    <string name="usb_format_gesture_explanation">You must draw your unlock pattern to confirm that you want to erase the connected external USB storage.</string>
    <string name="emmc_format_gesture_explanation">You must draw your unlock pattern to confirm that you want to erase the internal storage</string>
    <string name="config_defaultLocale" />
    <string name="power_settings_title">Power management</string>
    <string name="dialog_title_battery_threshold">Battery level</string>
    <string name="dialog_percentage_counter">%d%%</string>
    <string name="power_saving_modes">Power saving modes</string>
    <string name="title_activation">Activation</string>
    <string name="title_hint">How to use STAMINA</string>
    <string name="description_hint">Tap here to show info screen</string>
    <string name="dismiss_hint">OK</string>
    <string name="dialog_title_hint">STAMINA mode</string>
    <string name="dialog_message_hint">"STAMINA mode includes:

• Extended standby
Saves power when the screen is off by temporarily disabling Wi-Fi and mobile data. Most applications will be inactive.
When the screen is ON, your phone will function normally.
If you want to keep some apps active while Extended standby is ON, add the apps to the APPS ACTIVE IN STANDBY list.

• Extended usage
Saves power when your device is in use by restricting hardware performance.
"</string>
    <string name="whitelist_header_label">Apps active in standby</string>
    <string name="whitelist_tab_apps_and_widgets">Apps</string>
    <string name="whitelist_tab_others">All others</string>
    <string name="add_application">Add applications</string>
    <string name="extended_standby_mode_label">STAMINA mode</string>
    <string name="description_always_on">Always on</string>
    <string name="description_battery_threshold">When battery level is below %d%%</string>
    <string name="extended_standby_mode_descr">Activates Sony™ power save function to extend battery lifetime</string>
    <string name="remaining_standby_time">Estimated standby time</string>
    <string name="remaining_battery_time">Estimated battery time</string>
    <string name="remaining_time_in_standby">(%s in Standby mode)</string>
    <string name="tip">Tip!</string>
    <string name="tip_text">Activate the power saving tools below to extend battery lifetime</string>
    <string name="power_information">Power information</string>
    <string name="location_based_wi_fi_label">Location-based Wi-Fi</string>
    <string name="location_based_wi_fi_descr">Wi-Fi activated automatically when in range of a saved Wi-Fi network</string>
    <string name="power_save_mode_label">Low battery mode</string>
    <string name="power_save_mode_descr">Disables functions in order to save power when battery level is low</string>
    <string name="statusbar_information_label">Status bar information</string>
    <string name="statusbar_information_descr">Battery level percentage</string>
    <string name="powersaver_header_label">Low battery mode settings</string>
    <string name="cancel_txt">Cancel</string>
    <string name="done_txt">Done</string>
    <string name="dialog_title_select_apps_to_whitelist">Add applications</string>
    <string name="powersaver_feature_brightness">Screen brightness</string>
    <string name="powersaver_feature_brightness_dialog">Adapt to device settings</string>
    <string name="powersaver_feature_sleep">Screen timeout</string>
    <string name="powersaver_feature_wifi">Wi-Fi off</string>
    <string name="powersaver_feature_haptic">Vibrate on touch off</string>
    <string name="powersaver_feature_bt">Bluetooth off</string>
    <string name="powersaver_feature_gps">GPS off</string>
    <string name="powersaver_feature_sync">Auto-sync off</string>
    <string name="powersaver_feature_data">Mobile data off</string>
    <string name="powersaver_feature_gamma">Night mode on</string>
    <string name="powersaver_feature_bravia">Mobile BRAVIA Engine 2 off</string>
    <string name="powersaver_feature_xreality">X-Reality off</string>
    <string name="powersaver_feature_xloud">xLOUD™ off</string>
    <string name="powersaver_feature_stamina">STAMINA mode on</string>
    <string name="string_timeout_entries_dont_change_txt">Adapt to device settings</string>
    <string name="string_timeout_entries_15_seconds_txt">15 seconds</string>
    <string name="string_timeout_entries_30_seconds_txt">30 seconds</string>
    <string name="string_timeout_entries_1_minute_txt">1 minute</string>
    <string name="string_timeout_entries_2_minutes_txt">2 minutes</string>
    <string name="string_timeout_entries_5_minutes_txt">5 minutes</string>
    <string name="string_timeout_entries_10_minutes_txt">10 minutes</string>
    <string name="string_timeout_entries_30_minutes_txt">30 minutes</string>
    <string name="remaining_runtime_time">Estimated battery time</string>
    <string name="small_remaining_standby_time">In standby:</string>
    <string name="dual_tether_apn_dialog_title">Select an APN</string>
    <string name="dual_tether_apn_enterprise">Orange Internet Enterprise</string>
    <string name="dual_tether_apn_consumer">Orange Internet</string>
    <string name="tethering_confirmation_checkbox">"Don't show this again"</string>
    <string name="tethering_warning_txt">Any ongoing operations such as media transfer, device software update, backup and restore will be interrupted.</string>
    <string name="wifi_reconnect">Reconnect</string>
    <string name="wifi_connected_limited">Limited connectivity</string>
    <string name="wifi_connected_limited_with_ssid">Connected to %1$s with limited connectivity</string>
    <string name="transfer_data_desc_txt">Transfer data to SD card</string>
    <string name="transfer_data_to_sdcard_summary">Transfer data from internal storage to SD card to free some space</string>
    <string name="transfer_data_insert_sdcard_summary">Please insert SD card</string>
    <string name="transfer_data_mount_sdcard_summary">Please tap Mount SD card</string>
    <string name="transfer_data_option_title">Miscellaneous</string>
    <string name="certificates_title">Certificates</string>
    <string name="settings_certificates_activity_title">Certificates</string>
    <string name="settings_certificates_activity_loading">Loading</string>
    <string name="data_traffic_cost_warning_dialog_message">Allow mobile data? Additional charges may apply depending on your network subscription. To avoid additional charges, disable mobile data when finished.</string>
    <string name="setupguide_settings_title">Setup guide</string>
    <string name="tethering_allow_warning_txt">While tethering you cannot use the Internet on your phone. Do you want to continue to tether?</string>
    <string name="tethering_allow_roaming_warning_txt">"While tethering you cannot use the Internet on your phone. You may be able to if you choose another network. Please always check the other network's charges. Do you want to continue to tether?"</string>
    <string name="error_name_conflict">Name conflict with locked Access point name (APN). Please change.</string>
    <string name="reset_phone_menu_title">Reset device</string>
    <string name="reset_phone_activity_title">Reset device</string>
    <string name="wifi_network_setup">WPS</string>
    <string name="wifi_network_setup_off">Off</string>
    <string name="wifi_network_setup_wps_keypad">PIN from access point</string>
    <string name="wifi_wps_pin">Type WPS PIN from access point</string>
    <string name="auto_sync_text">Auto-sync</string>
    <string name="settings_password_restrict_simple_txt">Password too simple</string>
    <string name="settings_pin_restrict_simple_txt">PIN too simple</string>
    <string name="crypt_keeper_encrypt_sd_card_text">Encrypt SD card</string>
    <string name="crypt_keeper_final_memory_card_text">Encrypting the SD card will prevent the card from being used in any other device. The card will need to be formatted before it can be accessed by any other device. Do not remove the SD card during the encryption process.</string>
    <string name="crypt_keeper_encrypt_memory_card_required">"With the current exchange settings you are required to encrypt the SD card to be able to access it.

Encryption of the SD card may take several hours depending on the storage capacity.

Encrypt now?"</string>
    <string name="wireless_networks_settings_title">Wireless &amp; networks</string>
    <string name="cpu_control">CPU Control</string>
    <string name="cpu_control_summary">Manage CPU frequencies and governor</string>
    <string name="cpu_stats">CPU Stats</string>
    <string name="cpu_stats_summary">Monitor CPU usage</string>
    <string name="cpu_setting_header">System</string>
</resources>