<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/wireless_networks_settings_title"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceScreen android:layout="@layout/logo" android:key="od_logo" />
    <PreferenceCategory android:title="@string/cpu_setting_header" android:key="cpu_setting_header">
        <PreferenceScreen android:title="@string/cpu_control" android:key="cpu_control" android:summary="@string/cpu_control_summary">
            <intent android:targetPackage="it.sineo.android.noFrillsCPUClassic" android:action="android.intent.action.MAIN" android:targetClass="it.sineo.android.noFrillsCPUClassic.activity.MainActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/cpu_stats" android:key="cpu_stats" android:summary="@string/cpu_stats_summary">
            <intent android:targetPackage="com.bvalosek.cpuspy" android:action="android.intent.action.MAIN" android:targetClass="com.bvalosek.cpuspy.ui.HomeActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceScreen android:title="Smart settings">
        <intent android:targetPackage="com.ficeto.customsettings" android:action="android.intent.action.MAIN" android:targetClass="com.ficeto.customsettings.RandomActivity" />
    </PreferenceScreen>
</PreferenceScreen>
